Bugfix: fix scrollbar on bottom of the webapp + formatting date

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 /* You can add global styles to this file, and also import other style files */
 html, body {
-    background: #001233
+    background: #001233;
+    max-width: 100%;
+    overflow-x: hidden;
 }
